[gd_scene load_steps=13 format=2]

[ext_resource path="res://Graphics/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Main_Menu.gd" type="Script" id=2]
[ext_resource path="res://Graphics/black.png" type="Texture" id=3]
[ext_resource path="res://button1.tres" type="StyleBox" id=4]
[ext_resource path="res://Graphics/Button_texture_hovered.png" type="Texture" id=5]
[ext_resource path="res://button.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 89, 26 )

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 13
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Main_Menu" type="Node2D"]
scale = Vector2( 11.8958, -32.2856 )
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="CanvasLayer"]
margin_right = 480.0
margin_bottom = 270.0
rect_min_size = Vector2( 480, 270 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="CanvasLayer/Menu"]
margin_left = -0.594604
margin_top = 0.594604
margin_right = 479.405
margin_bottom = 270.595
rect_min_size = Vector2( 480, 270 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="CanvasLayer/Menu/Center"]
margin_left = 201.0
margin_top = 101.0
margin_right = 278.0
margin_bottom = 169.0

[node name="Play" type="Button" parent="CanvasLayer/Menu/Center/Grid"]
margin_right = 77.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="Instruction" type="Button" parent="CanvasLayer/Menu/Center/Grid"]
margin_top = 24.0
margin_right = 77.0
margin_bottom = 44.0
rect_min_size = Vector2( 50, 20 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Instruction"

[node name="Exit" type="Button" parent="CanvasLayer/Menu/Center/Grid"]
margin_top = 48.0
margin_right = 77.0
margin_bottom = 68.0
rect_min_size = Vector2( 50, 20 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="CheckBox" parent="CanvasLayer/Menu"]
margin_left = 360.379
margin_top = 229.027
margin_right = 477.379
margin_bottom = 262.027
custom_fonts/font = SubResource( 2 )
text = "Fullscreen"

[node name="Vsync" type="CheckBox" parent="CanvasLayer/Menu"]
margin_left = 360.379
margin_top = 199.027
margin_right = 477.379
margin_bottom = 232.027
custom_fonts/font = SubResource( 2 )
text = "Vsync"

[node name="License" type="Button" parent="CanvasLayer/Menu"]
margin_left = 7.10529
margin_top = 226.46
margin_right = 96.1053
margin_bottom = 252.46
rect_min_size = Vector2( 50, 20 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "License"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 480.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="CanvasLayer/Instruction"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 480, 270 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Instruction/Center"]
margin_left = 90.0
margin_top = 35.0
margin_right = 390.0
margin_bottom = 235.0
rect_min_size = Vector2( 300, 200 )

[node name="Label" type="Label" parent="CanvasLayer/Instruction/Center/Panel"]
margin_left = 4.0
margin_top = 7.0
margin_right = 297.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 3 )
text = "Control: 
W,Space and Up arrow -> jump
A,D and arrows left and right -> moving sideways

Goal of game:
You collect watches to survive. 
You have to go to target."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/Instruction/Center/Panel"]
margin_left = 229.958
margin_top = 167.942
margin_right = 294.958
margin_bottom = 193.942
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
margin_top = 8.94055
margin_right = 480.0
margin_bottom = 47.9406
custom_fonts/font = SubResource( 5 )
text = "RushLife"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="black" type="Sprite" parent="."]
position = Vector2( 21.4961, 21.0122 )
texture = ExtResource( 3 )

[connection signal="pressed" from="CanvasLayer/Menu/Center/Grid/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Center/Grid/Instruction" to="." method="_on_Instruction_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Center/Grid/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/License" to="." method="_on_License_pressed"]
[connection signal="pressed" from="CanvasLayer/Instruction/Center/Panel/Button" to="." method="_on_Button_pressed"]
